<resources>
    <string name="app_name">DigitalKeyboard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_equally">=</string>
    <string name="_fold">+</string>
    <string name="_subtract">-</string>
    <string name="_multiply">x</string>
    <string name="_toSplit">/</string>
    <string name="_point">,</string>
    <string name="reset">reset</string>
    <string name="_myTheme">Theme</string>
    <string name="Settings">Settings</string>

    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bardark</string>
    <string name="material_dark">Material dark</string>

</resources>