<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sand"
    android:orientation="vertical">

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_1"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_2"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintVertical_chainStyle="packed"
    />


    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/two"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_4"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
    />


    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_5"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/two"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintBottom_toTopOf="@id/eight"
    />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_6"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/nine"
    />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_7"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintBottom_toBottomOf="@id/button_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
    />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_8"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/five"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintBottom_toBottomOf="@id/zero"

    />


    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/six"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintBottom_toBottomOf="@id/button_equals"

    />


    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_point"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/zero"
        app:layout_constraintBottom_toTopOf="@id/reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"

    />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/eight"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintBottom_toTopOf="@id/reset"


    />


    <Button
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_equally"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/nine"
        app:layout_constraintStart_toEndOf="@id/zero"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintBottom_toTopOf="@id/reset"

    />


    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_toSplit"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintVertical_chainStyle="packed"
    />


    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_multiply"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_division"
        app:layout_constraintStart_toEndOf="@id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
    />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:textSize="23sp"
        android:text="@string/_subtract"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
    />


    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_fold"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset"

    />


    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zero"
    />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:textColor="#1B289A"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,RtlHardcoded,TextViewEdits"
    />



</androidx.constraintlayout.widget.ConstraintLayout>
