<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_1"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_2"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintVertical_chainStyle="packed"
    />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/button_toSplit"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_4"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
    />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_5"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button8"
    />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_6"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button9"
    />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_7"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintBottom_toBottomOf="@id/button_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
    />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_8"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintBottom_toBottomOf="@id/button0"

    />


    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button_subtract"
        app:layout_constraintBottom_toBottomOf="@id/button_equally"

    />


    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_point"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"

    />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintBottom_toBottomOf="parent"

    />


    <Button
        android:id="@+id/button_equally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_equally"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button_fold"
        app:layout_constraintBottom_toBottomOf="parent"

    />


    <Button
        android:id="@+id/button_toSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_toSplit"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_multiply"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_toSplit"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_subtract"
    />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:textSize="23sp"
        android:text="@string/_subtract"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_fold"
    />


    <Button
        android:id="@+id/button_fold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7203000C"
        android:text="@string/_fold"
        android:textSize="23sp"
        app:iconTint="#1BFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/button_subtract"
        app:layout_constraintStart_toEndOf="@id/button_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

    />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/calc"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
