<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sand"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/Settings" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.0">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMyCoolStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_cool_style" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLightDarkAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light_action_bar_dark" />
    </RadioGroup>






</androidx.constraintlayout.widget.ConstraintLayout>